@@ -1,3 +1,5 @@
+New function: simcall_process_get_kill_time()
+
  surf.java:
  * class NetworkLink renamed to Link
 
